# pubwatch

./: .gitignore  .pylintrc  Makefile  README.md  cer-feeds.json  pubwatch.py  pubwatch.sh  pyproject.toml  update_feeds.sh  validator.env
.github/workflows/: release.yml  unit-tests-all.yml
requirements/: local.txt  requirements.txt
src/pubwatch/: feed_helper.py  pubwatch.py
tests/: test_main.py
